--- a/src/cn/yiiguxing/asclepius/Surface.form
+++ b/src/cn/yiiguxing/asclepius/Surface.form
@@ -111,6 +111,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <selected value="true"/>
               <text value="Enable Smoothing"/>
             </properties>
           </component>
@@ -135,7 +136,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="2" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <enabled value="false"/>
+              <enabled value="true"/>
               <text value="Number of Iterations:"/>
             </properties>
           </component>
@@ -145,7 +146,7 @@
             </constraints>
             <properties>
               <editable value="false"/>
-              <enabled value="false"/>
+              <enabled value="true"/>
               <model/>
             </properties>
           </component>
