--- a/src/cn/yiiguxing/asclepius/form/VolumePanel.form
+++ b/src/cn/yiiguxing/asclepius/form/VolumePanel.form
@@ -7,7 +7,7 @@
     <properties/>
     <border type="etched"/>
     <children>
-      <grid id="53f2e" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="53f2e" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints border-constraint="North"/>
         <properties>
@@ -28,6 +28,12 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <component id="9a312" class="cn.yiiguxing.asclepius.widget.ActionLabel" binding="maximizeButton" custom-create="true">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
       <grid id="d7952" binding="contentPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
